--- a/Frontend/public/dettaglio_scadenza.html
+++ b/Frontend/public/dettaglio_scadenza.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="dark">
+<html lang="it">
 
 <head>
     <meta http-equiv="Content-Security-Policy"
@@ -118,5 +118,3 @@
 </body>
 
 </html>
-
-
