--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="dark">
+<html lang="it">
 
 <head>
     <meta http-equiv="Content-Security-Policy"
@@ -370,5 +370,3 @@
 </body>
 
 </html>
-
-
