--- a/Frontend/public/configurazione_generali.html
+++ b/Frontend/public/configurazione_generali.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="dark" data-i18n="loading">
+<html lang="it" data-i18n="loading">
 
 <head>
     <!-- Anti-flicker & Theme Master (V3.9) -->
