--- a/Frontend/public/notifiche_storia.html
+++ b/Frontend/public/notifiche_storia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="dark">
+<html lang="it">
 
 <head>
     <meta http-equiv="Content-Security-Policy"
@@ -44,7 +44,8 @@
                     class="flex-center-col py-20 px-10 text-center hidden animate-in fade-in duration-500">
                     <div
                         class="size-20 rounded-[2.5rem] bg-white/5 border border-white/10 flex-center text-white/10 mb-6 glass-card shadow-2xl">
-                        <span class="material-symbols-outlined text-4xl">notifications_off</span> </div>
+                        <span class="material-symbols-outlined text-4xl">notifications_off</span>
+                    </div>
                     <h3 class="text-lg font-black text-white/80 uppercase">Nessuna Notifica</h3>
                     <p class="text-xs font-bold text-white/20 uppercase tracking-widest mt-2 leading-relaxed">Il tuo
                         archivio Ã¨ vuoto. <br>Gli avvisi futuri appariranno qui.</p>
@@ -60,5 +61,3 @@
 </body>
 
 </html>
-
-
