--- a/Frontend/public/profilo_privato.html
+++ b/Frontend/public/profilo_privato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it" class="dark">
+<html lang="it">
 
 <head>
     <meta http-equiv="Content-Security-Policy"
@@ -194,5 +194,3 @@
 </body>
 
 </html>
-
-
