--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -42,19 +42,10 @@
 
         <div class="spacer-header"></div>
 
-        <!-- Search Bar (Animated) -->
-        <div id="search-bar-container" class="search-bar-animated">
-            <div class="search-input-wrapper">
-                <span class="material-symbols-outlined">search</span>
-                <input id="deadline-search" type="text" data-t-placeholder="search_deadlines_placeholder"
-                    placeholder="Cerca scadenze..." />
-            </div>
-        </div>
-
         <main class="base-main">
             <div class="page-container">
 
-                <!-- Toolbar: Count + Sort -->
+                <!-- Toolbar: Count + Sort (Ora SOPRA la ricerca) -->
                 <div class="deadline-toolbar">
                     <!-- Left: Count -->
                     <div class="flex-row items-center gap-2">
@@ -78,6 +69,15 @@
                             <div class="base-dropdown-item" data-t="sort_name_za" data-value="name-desc">NOME (Z-A)
                             </div>
                         </div>
+                    </div>
+                </div>
+
+                <!-- Search Bar (SOTTO la toolbar) -->
+                <div id="search-bar-container" class="search-bar-animated">
+                    <div class="search-input-wrapper">
+                        <span class="material-symbols-outlined">search</span>
+                        <input id="deadline-search" type="text" data-t-placeholder="search_deadlines_placeholder"
+                            placeholder="Cerca scadenze..." />
                     </div>
                 </div>
 
