--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -56,14 +56,12 @@
 
                     <!-- Context Selector (Premium Dropdown V4.5) -->
                     <div class="settings-item">
-                        <div class="settings-icon-box icon-blue">
-                            <span class="material-symbols-outlined">filter_list</span>
-                        </div>
                         <div class="settings-item-info">
                             <div class="base-dropdown w-full">
                                 <button id="archive-filter-btn"
                                     class="base-btn-secondary w-full flex justify-between items-center h-11 px-4 rounded-xl">
-                                    <span id="active-context-label" data-t="archive_all">Tutti gli archiviati</span>
+                                    <span id="active-context-label" class="font-bold text-sm" data-t="archive_all">Tutti
+                                        gli archiviati</span>
                                     <span class="material-symbols-outlined">expand_more</span>
                                 </button>
                                 <div id="archive-context-menu" class="base-dropdown-menu w-full">
