fix: Ripristinato core.css e implementato protocollo core-transizione.css per Archivio Account

--- a/Frontend/public/archivio_account.html
+++ b/Frontend/public/archivio_account.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="assets/css/core_fascie.css">
     <link rel="stylesheet" href="assets/css/core_pagine.css?v=1.0">
     <link rel="stylesheet" href="assets/css/core_moduli.css?v=1.0">
+    <link rel="stylesheet" href="assets/css/core-transizione.css?v=1.0">
 
     <!-- CORE JS -->
     <script src="assets/js/core.js"></script>
