--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="assets/css/core_pagine.css?v=1.0">
     <link rel="stylesheet" href="assets/css/core_moduli.css?v=1.0">
     <link rel="stylesheet" href="assets/css/scadenze.css?v=1.0">
+    <link rel="stylesheet" href="assets/css/core-transizione.css?v=1.1">
 
     <!-- CORE JS -->
     <script src="assets/js/core.js"></script>
