feat(scadenze): Implementazione sistema Allegati Premium V4.1 con Caricamento Differito e UI Titanium

--- a/Frontend/public/configurazione_automezzi.html
+++ b/Frontend/public/configurazione_automezzi.html
@@ -44,11 +44,9 @@
         <!-- Automated Header -->
         <header id="header-placeholder" class="base-header"></header>
 
-        <div class="spacer-header"></div>
-
         <!-- Main Content -->
         <main class="base-main">
-            <div class="page-container archive-page-content">
+            <div class="page-container archive-page-content pt-header-extra pb-footer-extra">
 
                 <div class="saetta-master"></div>
 
@@ -138,7 +136,7 @@
                     </div>
                 </div>
 
-                <div class="spacer-footer"></div>
+                <!-- Spacer rimosso: gestito da pb-footer-extra -->
             </div>
         </main>
 
