--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -42,11 +42,11 @@
 
         <!-- Automated Header -->
         <header id="header-placeholder" class="base-header"></header>
-        <div class="spacer-header"></div>
+        <!-- Spacer header rimosso -->
 
         <!-- Main Content -->
         <main class="base-main">
-            <div class="page-container">
+            <div class="page-container pt-header-extra pb-footer-extra">
 
                 <!-- Hero Profile Header (V3.9 Refactored) -->
                 <div class="card-hero border-glow hero-card-variant">
@@ -279,7 +279,7 @@
             </div>
         </div>
 
-        <div class="spacer-footer"></div>
+        <!-- Spacer footer rimosso -->
         <footer id="footer-placeholder" class="base-footer"></footer>
     </div>
 
