--- a/Frontend/public/privacy.html
+++ b/Frontend/public/privacy.html
@@ -38,11 +38,9 @@
         <!-- Automated Header -->
         <header id="header-placeholder" class="base-header"></header>
 
-        <div class="spacer-header"></div>
-
         <!-- Main Content -->
         <main class="base-main">
-            <div class="page-container">
+            <div class="page-container pt-header-extra pb-footer-extra">
 
                 <div class="hero-page-header">
                     <div class="saetta-master"></div>
@@ -178,7 +176,7 @@
                     <p class="app-version-info" data-t="privacy_update_text">Ultimo aggiornamento: Gennaio 2026</p>
                 </div>
 
-                <div class="spacer-footer"></div>
+                <!-- Spacer rimosso: gestito da pb-footer-extra -->
             </div>
         </main>
 
