--- a/Frontend/public/scadenze.html
+++ b/Frontend/public/scadenze.html
@@ -40,10 +40,8 @@
         <!-- Automated Header -->
         <header id="header-placeholder" class="base-header"></header>
 
-        <div class="spacer-header"></div>
-
         <main class="base-main">
-            <div class="page-container">
+            <div class="page-container pt-header-extra pb-footer-extra">
 
                 <!-- Toolbar: Count + Sort (Ora SOPRA la ricerca) -->
                 <div class="deadline-toolbar">
@@ -98,7 +96,7 @@
                     </div>
                 </div>
 
-                <div class="spacer-footer"></div>
+                <!-- Spacer Footer rimosso: gestito da padding .page-container -->
             </div>
         </main>
 
